# Noti_assistant

./: .flake8  .gitignore  .pylintrc  API_DOCUMENTATION.md  Dockerfile  LICENSE  README.md  TESTING.md  changes.md  docker-compose.test.yml  docker-compose.yml  init.sql  manage.py  pyproject.toml  pyrightconfig.json  run_tests.py  test-docker.bat
apps/: tests_config.py  tests_integration.py
apps/core/: auth_views.py  authentication.py  exception_handler.py  exceptions.py  health_urls.py  middleware.py  models.py  permissions.py  rate_limiting.py  serializers.py  tests_api.py  tests_models.py  tests_rate_limiting.py  tests_validation.py  urls.py  validators.py  views.py
apps/core/management/commands/: rate_limit.py
apps/core/migrations/: 0001_initial.py
apps/notifications/: models.py  serializers.py  tests_api.py  tests_models.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_notificationchannel_notificationdelivery_and_more.py
apps/telegram_bot/: __init__.py  bot.py  bot_new.py  bot_simple_for_testing.py  models.py  serializers.py  tests_api.py  tests_bot.py  tests_models.py  urls.py  views.py  webhook_server.py
apps/telegram_bot/management/commands/: manage_bot_commands.py  setup_bot.py  start_bot.py
apps/telegram_bot/migrations/: 0001_initial.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
noti/: asgi.py  celery.py  urls.py  wsgi.py
noti/settings/: base.py  development.py  production.py  test.py
scripts/: test-docker.bat  test-docker.sh
